--- a/.github/workflows/www.yml
+++ b/.github/workflows/www.yml
@@ -15,6 +15,7 @@ jobs:
           version: 8.15.6
       - run: pnpm install
       - run: npm run build
+      - run: touch out/.nojekyll
       - name: Deploy to Github Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
