--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "next": "14.2.1",
     "react": "^18",
-    "react-data-table-component": "^7.6.2",
-    "react-dom": "^18"
+    "react-data-table-component": "7.6.2",
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
